<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".LoginFragment">
    <TextView
        android:id="@+id/tvLOGIN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:layout_centerHorizontal="true"
        android:textSize="40sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etUsernamL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvLOGIN"
        android:layout_marginTop="77dp"
        android:hint="@string/masukan_username"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/etPaswL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etUsernamL"
        android:layout_marginTop="35dp"
        android:hint="@string/masukan_password"
        android:minHeight="48dp" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/etPaswL"
        android:layout_centerHorizontal="true"
        android:text="@string/login_dua" />

    <TextView
        android:id="@+id/tvRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnLogin"
        android:layout_alignParentRight="true"
        android:clickable="true"
        android:minHeight="48dp"
        android:text="@string/regist"
        android:textSize="20sp" />

</RelativeLayout>