<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="20dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistFragment">

    <TextView
        android:id="@+id/tvREGIST"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="100dp"
        android:layout_marginTop="16dp"
        android:text="@string/register"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText

        android:id="@+id/etNamaR"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:hint="@string/nama"
        android:minHeight="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/tvREGIST" />

    <EditText

        android:id="@+id/etUsernameR"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etNamaR"
        android:layout_marginTop="32dp"
        android:hint="@string/username"
        android:minHeight="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etNamaR" />

    <EditText

        android:id="@+id/etPaswR"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etUsernameR"
        android:layout_marginTop="32dp"
        android:hint="@string/password"
        android:minHeight="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etUsernameR" />

    <EditText
        android:id="@+id/etKonfPaswR"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etPaswR"
        android:layout_marginTop="32dp"
        android:hint="@string/ulangi_password"
        android:minHeight="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPaswR" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/etKonfPaswR"
        android:layout_centerInParent="true"
        android:layout_marginStart="160dp"
        android:layout_marginTop="108dp"
        android:text="@string/btn_login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etKonfPaswR" />


</androidx.constraintlayout.widget.ConstraintLayout>